--- a/params.yaml
+++ b/params.yaml
@@ -19,3 +19,7 @@ map_img_ext: '.png'
 executable_dir: '/f1tenth_gym/build/'
 
 waypoints_path: '/catkin_ws/src/f1tenth_gym_ros/maps/skirk.csv'
+
+scenario: single
+# scenarios: single (one car time trial)
+#            double (two car racing, 2 laps)
